--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -10,7 +10,7 @@
     owner: root
     group: root
     mode: 0644
-  register: '{{ memcached_config }}'
+  register: memcached_config
 
 - name: Restart service
   service:
