--- a/tasks/memcached_exporter.yml
+++ b/tasks/memcached_exporter.yml
@@ -1,3 +1,4 @@
+---
 - name: Download memcached_exporter tarball
   get_url:
     url: '{{ memcached_exporter_url }}'
@@ -11,7 +12,7 @@
     dest: '/usr/local/bin'
     creates: '/usr/local/bin/memcached_exporter'
     remote_src: true
-    extra_ops:
+    extra_opts:
       - '--wildcards'
       - '--strip=1'
       - '*/memcached_exporter'
