refactor to split into files, add restart handler
Signed-off-by: Jakub Sokołowski <jakub@status.im>

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,37 +1,4 @@
 ---
-- name: Install memcached
-  apt:
-    name: '{{ memcached_package }}'
-
-- name: Template configuration
-  template:
-    src: 'memcached.conf.j2'
-    dest: '{{ memcached_cfg_file }}'
-    owner: root
-    group: root
-    mode: 0644
-  register: memcached_config
-
-- name: Restart service
-  service:
-    name: '{{ memcached_service }}'
-    state: restarted
-  when: memcached_config.changed
-
+- include_tasks: memcached.yml
 - include_tasks: memcached_exporter.yml
   when: memcached_exporter_enabled
-
-- name: Create Consul service definition
-  include_role: name=consul-service
-  vars:
-    consul_config_name: '{{ memcached_service }}'
-    consul_services:
-      - name: '{{ memcached_service }}'
-        tags: '{{ memcached_consul_tags }}'
-        port: '{{ memcached_port }}'
-        address: '{{ memcached_addr }}'
-        checks:
-          - id: '{{ memcached_service }}-health'
-            name: 'Memcached'
-            type: 'tcp'
-            tcp: '{{ memcached_addr }}:{{ memcached_port }}'
