--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -1,6 +1,12 @@
 ---
+- name: restart memcached
+  systemd:
+    name: '{{ memcached_service }}'
+    state: 'restarted'
+    daemon_reload: true
+
 - name: restart memcached_exporter
   systemd:
+    name: '{{ memcached_exporter_service }}'
+    state: 'restarted'
     daemon_reload: true
-    name: memcached_exporter
-    state: restarted
