--- a/tasks/memcached_exporter.yml
+++ b/tasks/memcached_exporter.yml
@@ -35,7 +35,7 @@
       - name: '{{ memcached_exporter_service }}'
         tags: '{{ memcached_exporter_consul_tags }}'
         port: '{{ memcached_exporter_port }}'
-        address: '{{ memcached_addr }}'
+        address: '{{ ansible_local.tinc.vpn_ip }}'
         checks:
           - id: '{{ memcached_exporter_service }}-health'
             name: 'Memcached Exporter'
