--- a/tasks/memcached.yml
+++ b/tasks/memcached.yml
@@ -15,7 +15,7 @@
   notify: restart memcached
 
 - name: Create Consul service definition
-  include_role: name=consul-service
+  include_role: name=infra-role-consul-service
   vars:
     consul_config_name: '{{ memcached_service }}'
     consul_services:
