--- a/tasks/memcached_exporter.yml
+++ b/tasks/memcached_exporter.yml
@@ -28,7 +28,7 @@
   notify: restart memcached_exporter
 
 - name: Create Consul service definition
-  include_role: name=consul-service
+  include_role: name=infra-role-consul-service
   vars:
     consul_config_name: '{{ memcached_exporter_service }}'
     consul_services:
