config: add support for --listen-backlog flag
Signed-off-by: Jakub Sokołowski <jakub@status.im>

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -8,6 +8,7 @@ memcached_size_mb: 64
 memcached_max_item_size: '1m'
 memcached_maxconn: 1024
 memcached_max_reqs_per_event: 20
+memcached_listen_backlog: 1024
 
 memcached_verbose: 'false'
 memcached_log_file: '/var/log/memcached.log'
